fixed flickty on small phones for real

--- a/strabo/static/public_styles/popup.css
+++ b/strabo/static/public_styles/popup.css
@@ -10,6 +10,7 @@
     z-index: 100000; /* goes above leaflet link */
 }
 .popup-foreground {
+    position:absolute;
     height: 100%;
     /* size of box on larger screens*/
     max-height: 800px;
@@ -26,7 +27,9 @@
     width:100%;
     background: #ebf5e4;
     /*must add to 100 with #text-section:height and #carousel-space:height*/
-    height: 43%;
+    position: absolute;
+    top: 0;
+    height:43%;
 }
 
 #top-section h2 {
@@ -44,7 +47,10 @@
 }
 #carousel-space{
     /*must add to 100 with #top-section:height and #text-section:height*/
+    position: absolute;
+    top:43%;
     height: 49%;
+    width: 100%;
 }
 .padded-pic{
     padding: 0 20px 0 20px;
@@ -59,19 +65,12 @@
     color: #422C1E;
     font-family: 'Futura', 'Trebuchet MS', Arial, sans-serif;
 }
-.text-measure{
-    /*used by js function liniar_text_width(text)*/
-    position: absolute;
-    top:0;
-    bottom:0;
-    left:0;
-    right:-10000;
-    font-size: 10px;`
-}
 #text-section{
-    width: 100%;
     /*must add to 100 with #top-section:height and #carousel-space:height*/
+    position: absolute;
+    top: 92%;
     height: 8%;
+    width: 100%;
     text-align: center;
     background: #ebf5e4;
 }
@@ -98,4 +97,13 @@
     -webkit-transform: translateY(-50%);
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
+}
+.text-measure{
+    /*used by js function liniar_text_width(text)*/
+    position: absolute;
+    top:0;
+    bottom:0;
+    left:0;
+    right:-10000;
+    font-size: 10px;`
 }
